Minor code optimisations and cleanup